--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="alpha">#00FFFFFF</color>
 
     <!--  default  -->
-    <color name="theme">#2296eb</color>
+    <color name="theme">#009FE8</color>
     <color name="background">#FAFAFA</color>
     <color name="main_text">#0d131c</color>
     <color name="secondary_text">#7C7C7C</color>
