--- a/app/src/main/res/layout/setting_main.xml
+++ b/app/src/main/res/layout/setting_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardCornerRadius="@dimen/cardRadius">
+    app:cardCornerRadius="@dimen/cardRadius"
+    app:cardElevation="0dp">
 
     <LinearLayout
         android:id="@+id/mainView"
