--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="data"
-            type="com.weather.data.model.Data" />
+            type="com.weather.data.model.weather.Data" />
     </data>
 
     <androidx.cardview.widget.CardView
