--- a/app/src/main/res/layout/widget_1.xml
+++ b/app/src/main/res/layout/widget_1.xml
@@ -50,6 +50,7 @@
         android:ems="1"
         android:gravity="center"
         android:lineSpacingMultiplier="0.7"
+        android:visibility="gone"
         android:text="┃┃┃" />
 
 
