--- a/app/src/main/res/layout/item_weather1.xml
+++ b/app/src/main/res/layout/item_weather1.xml
@@ -1,149 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <data>
-
-        <variable
-            name="data"
-            type="com.weather.data.model.weather.Data" />
-
-        <variable
-            name="onClick"
-            type="android.view.View.OnClickListener" />
-
-        <variable
-            name="isGone"
-            type="int" />
-
-    </data>
-
-    <FrameLayout
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
+    <!--布局2-->
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <!--布局2-->
-        <androidx.cardview.widget.CardView
+        android:layout_height="100dp"
+        android:layout_marginTop="3dp"
+        app:cardCornerRadius="0dp"
+        app:cardElevation="0.3dp">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="3dp"
-            android:onClick="@{onClick}"
-            app:cardCornerRadius="0dp"
-            app:cardElevation="0.3dp">
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:background="@color/hr"
                 android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@color/hr"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@{data.d}"
-                            android:textColor="@color/theme"
-                            android:textSize="32sp"
-                            tools:text="04" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="right"
-                            android:paddingLeft="@dimen/margin_small"
-                            android:text="@{data.m}"
-                            android:textColor="@color/main_text"
-                            android:textSize="@dimen/title_text_size"
-                            tools:text="11" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:padding="@dimen/margin_small">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="@{data.date_nl}"
-                            android:textColor="@color/main_text"
-                            android:textSize="@dimen/item_smalltext_size"
-                            android:visibility="@{isGone}"
-                            tools:text="初一" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="@{data.week}"
-                            android:textColor="@color/theme"
-                            android:textSize="@dimen/item_text_size"
-                            tools:text="星期一" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="wrap_content"
-                    android:background="@color/theme" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/background"
-                    android:gravity="center_vertical"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/day"
+                        tools:text="04"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/theme"
+                        android:textSize="32sp" />
+
+                    <TextView
+                        android:id="@+id/month"
+                        tools:text="11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:paddingLeft="@dimen/margin_small"
+                        android:textColor="@color/main_text"
+                        android:textSize="@dimen/title_text_size" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
                     android:orientation="vertical"
-                    android:paddingLeft="@dimen/padding_small">
+                    android:padding="@dimen/margin_small">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:id="@+id/date_nl"
+                        tools:text="初一"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/lineHeight"
-                        android:layout_marginRight="@dimen/margin_small"
-                        android:text="@{data.tems}"
+                        android:gravity="center"
                         android:textColor="@color/main_text"
-                        android:textSize="@dimen/item_text_size"
-                        tools:text="10-15C" />
+                        android:textSize="@dimen/item_smalltext_size" />
 
                     <TextView
+                        android:id="@+id/week"
+                        tools:text="星期一"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/lineHeight"
-                        android:text="@{data.wea}"
-                        android:textColor="@color/main_text"
-                        android:textSize="@dimen/item_text_size"
-                        tools:text="小雨" />
-
-                    <TextView
-                        android:id="@+id/tips"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/lineHeight"
-                        android:text="@{data.tip}"
-                        android:textColor="@color/main_text"
-                        android:textSize="@dimen/item_text_size"
-                        tools:text="顶顶顶顶顶顶" />
+                        android:gravity="center"
+                        android:textColor="@color/theme"
+                        android:textSize="@dimen/item_text_size" />
                 </LinearLayout>
 
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+            <View
+                android:layout_width="1dp"
+                android:layout_height="wrap_content"
+                android:background="@color/theme" />
 
-    </FrameLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/background"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/padding_small">
 
-</layout>
+                <TextView
+                    android:id="@+id/tems"
+                    tools:text="10-15C"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/lineHeight"
+                    android:layout_marginRight="@dimen/margin_small"
+                    android:textColor="@color/main_text"
+                    android:textSize="@dimen/item_text_size" />
+
+                <TextView
+                    android:id="@+id/wea"
+                    tools:text="小雨"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/lineHeight"
+                    android:textColor="@color/main_text"
+                    android:textSize="@dimen/item_text_size" />
+
+                <TextView
+                    android:id="@+id/tip"
+                    tools:text="顶顶顶顶顶顶"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/lineHeight"
+                    android:textColor="@color/main_text"
+                    android:textSize="@dimen/item_text_size" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</FrameLayout>
+
