--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -1,149 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background"
+    android:fitsSystemWindows="true">
 
-    <data>
-
-        <variable
-            name="weather"
-            type="com.weather.data.model.weather.Weather" />
-
-        <variable
-            name="now"
-            type="com.weather.data.model.weather.NowWeather" />
-
-        <variable
-            name="hint"
-            type="String" />
-    </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/mainLayout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background"
-        android:fitsSystemWindows="true">
+        android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/setting_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:id="@+id/setting_toolbar"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/setting"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginLeft="@dimen/margin_small"
+                android:clickable="true"
+                android:textColor="@drawable/title_text_click"
+                android:textSize="@dimen/title_text_size"
+                tools:text="杭州" />
 
-                <TextView
-                    android:id="@+id/setting"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/margin_small"
-                    android:clickable="true"
-                    android:textColor="@drawable/title_text_click"
-                    android:textSize="@dimen/title_text_size"
-                    tools:text="杭州" />
+            <TextView
+                android:id="@+id/now_wea"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_small"
+                android:textColor="@color/secondary_text"
+                tools:text="小雨" />
 
-                <TextView
-                    android:id="@+id/now_wea"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/margin_small"
-                    android:text="@{now.wea}"
-                    android:textColor="@color/secondary_text"
-                    tools:text="小雨" />
-
-                <TextView
-                    android:id="@+id/now_tem"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/margin_small"
-                    android:text="@{now.tem}"
-                    android:textColor="@color/secondary_text"
-                    tools:text="15℃" />
-
-
-            </LinearLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout"
+            <TextView
+                android:id="@+id/now_tem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_small"
-                android:focusable="true"
-                android:focusableInTouchMode="true">
+                android:textColor="@color/secondary_text"
+                tools:text="15℃" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/input"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/background"
-                    android:hint="@{hint}"
-                    android:inputType="text"
-                    android:singleLine="true"
-                    android:textColor="@color/main_text"
-                    android:textColorHint="@color/placeholder_text"
-                    android:textSize="@dimen/item_text_size"
-                    tools:hint="更新时间" />
 
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <TextView
-                android:id="@+id/noWea"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/tips_norain"
-                android:layout_marginTop="@dimen/margin_small"
-                android:textColor="@color/theme"
-                app:isGone="@{weather!=null? weather.data.size>0 : true}"
-                tools:visibility="gone" />
-
-            <com.scwang.smartrefresh.layout.SmartRefreshLayout
-                android:id="@+id/refresh"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/margin_small">
-
-                <com.weather.util.RainHeader
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/item_weather"/>
-
-            </com.scwang.smartrefresh.layout.SmartRefreshLayout>
         </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/pb"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_small"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/background"
+                android:inputType="text"
+                android:singleLine="true"
+                android:textColor="@color/main_text"
+                android:textColorHint="@color/placeholder_text"
+                android:textSize="@dimen/item_text_size"
+                tools:hint="更新时间" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:id="@+id/noWea"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/noword"
-            android:textColor="@color/alpha"
-            android:textIsSelectable="true"
-            android:textSize="@dimen/item_text_size"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_marginTop="@dimen/margin_small"
+            android:gravity="center"
+            android:text="@string/tips_norain"
+            android:textColor="@color/theme"
+            tools:visibility="gone" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            android:id="@+id/refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/margin_small">
 
-</layout>
+            <com.weather.util.RainHeader
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_weather" />
+
+        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+    </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/pb"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/noword"
+        android:textColor="@color/alpha"
+        android:textIsSelectable="true"
+        android:textSize="@dimen/item_text_size"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
